--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 body {
+    
+}
+.dashboard {
     display:grid;
     grid-template-columns: 1fr 4fr;
+    grid-template-rows: 1fr;
     grid-auto-flow: row;
+    height:100vh;
 }
 body > div {
     outline: solid rgb(27, 151, 48) 1px;
@@ -9,14 +14,16 @@ body > div {
 .sidebar {
     background-color: rgb(81, 177, 255);
     color:white;
-    font-weight: 700;
+    font-weight: 800;
+    font-size: large;
     padding:1.5em;
 }
 .sidebar ul {
     list-style-type: none;
     padding-inline-start: 0;
+    margin-bottom:1.5em;
 }
 
 .sidebar li {
-    margin:0.5em;
+    margin-top:0.5em;
 }
