--- a/style.css
+++ b/style.css
@@ -1,15 +1,19 @@
+/* prevent weird auto styling */
 body {
-    
+    margin:0;
 }
+
+/* page is a css grid, with the first column holding the side bar, and the second column holding the header and main content area */
 .dashboard {
     display:grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr;
-    grid-auto-flow: row;
+    grid-auto-flow:column;
     height:100vh;
 }
-body > div {
-    outline: solid rgb(27, 151, 48) 1px;
+
+/*debugging styling */
+.dashboard > div {
+    outline: solid rgb(27, 151, 48) 2px;
 }
 .sidebar {
     background-color: rgb(81, 177, 255);
@@ -26,4 +30,32 @@ body > div {
 
 .sidebar li {
     margin-top:0.5em;
+}
+
+.rightContainer {
+    display:grid;
+    grid-template-rows: 1fr 5fr;
+    margin:1em;
+    padding:1em;
+}
+
+.header {
+    box-shadow: 0 4px 3px -2px black;
+    display:grid;
+    grid-template-rows: 1fr 3fr;
+}
+
+.topHeader {
+    display:grid;
+    grid-template-columns: 4fr 1fr;
+}
+
+.bottomHeader {
+    display:grid;
+    grid-template-columns: 3fr 1fr;
+}
+
+.mainContent {
+    display:grid;
+    grid-template-columns: 3fr 1fr;
 }
