--- a/style.css
+++ b/style.css
@@ -42,20 +42,47 @@ body {
 .header {
     box-shadow: 0 4px 3px -2px black;
     display:grid;
-    grid-template-rows: 1fr 3fr;
+    grid-template-rows: 1fr 2fr;
+    margin-bottom:0;
 }
 
 .topHeader {
     display:grid;
     grid-template-columns: 4fr 1fr;
+    font-weight:800;
 }
 
 .bottomHeader {
     display:grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 1.5fr 1fr;
+    margin-bottom: 0;
 }
 
 .mainContent {
     display:grid;
     grid-template-columns: 3fr 1fr;
+}
+
+.greeting {
+    font-size:small;
+}
+
+.welcome {
+    font-weight: 900;
+}
+
+.buttons ul {
+    list-style-type:none;
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap:1em;
+}
+
+.buttons li {
+    background-color:rgb(81, 177, 255);
+    border-radius: 50px;
+    text-align:center;
+    padding:0.5em;
+    color:white;
+    font-weight:600;
 }
