--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body {
     margin:0;
     height:90vh;
+    font-family:Verdana, Geneva, Tahoma, sans-serif
 }
 
 /* page is a css grid, with the first column holding the side bar, and the second column holding the header and main content area */
@@ -17,7 +18,7 @@ div {
     /*outline: solid rgb(27, 151, 48) 2px;*/
 }
 .sidebar {
-    background-color: rgb(81, 177, 255);
+    background-color: rgb(23, 170, 228);
     color:white;
     font-weight: 800;
     font-size: 1em;
@@ -33,9 +34,35 @@ div {
     margin-top:0.5em;
 }
 
+.dashboardIcon {
+    fill:white;
+    margin-right:.25em;
+}
+
+.dashboardWidget.banner{
+    display:grid;
+    gap:0;
+    grid-template-columns: 1fr 2fr;
+    font-size:1.25em;
+    align-items: center;
+    margin:0;
+}
+
+.dashboardWidget {
+    display:grid;
+    gap:0;
+    grid-template-columns: 1fr 5fr;
+    font-size:1em;
+    align-items: center;
+    margin-bottom:0.25;;
+    fill:white;
+    align-content: center;
+    justify-content: center;
+}
+
 .rightContainer {
     display:grid;
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: 0.5fr 10fr;
     background-color: rgb(230, 241, 245);
 }
 
@@ -44,8 +71,9 @@ div {
     display:grid;
     grid-template-rows: 0.5fr 1fr;
     background-color: white;
-    margin-bottom:0.5em;
-    padding:1em;
+    margin-bottom:0;
+    padding:0.5em;
+    padding-bottom:0.5em;
 }
 
 .topHeader {
@@ -57,7 +85,8 @@ div {
 .bottomHeader {
     display:grid;
     grid-template-columns: 1.5fr 1fr;
-    padding:0;
+    padding-bottom:0;
+    margin-bottom:0;
 }
 
 .greeting {
@@ -88,9 +117,8 @@ div {
     display:grid;
     grid-template-columns: 3fr 1fr;
     background-color: rgb(230, 241, 245);
-
     font-size:0.85em;
-    margin:1em;
+    margin:0.5em;
 }
 
 .leftContent > p {
@@ -150,9 +178,10 @@ div {
     background-color:white;
     border-radius: 20px;
     box-shadow: 10px 10px 10px -5px #BCBCBC;
-    padding:1.5em;
+    padding:1em;
     display:grid;
     grid-template-rows: repeat(2, 1fr);
+    font-size:0.85em;
 }
 .announcementTitle p {
     font-weight: 700;
