--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ img {
     box-shadow: 10px 10px 10px -5px #BCBCBC;
     padding:1em;
     display:grid;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     font-size:0.85em;
 }
 .announcementTitle p {
@@ -247,11 +247,30 @@ img {
 .announcementBody p {
     color:rgb(95, 95, 95);
     font-weight: 400;
-    font-size:0.75em;
+    font-size:.75em;
     margin: 0;
 }
 
 .profileCard {
     display:grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 3fr;
+    align-items: center;
+}
+
+.profileCard p {
+    margin-top:.5em;
+}
+.profileCard img {
+    width:3em;
+}
+
+.handle p {
+    font-weight: 800;
+    margin-bottom: 0;
+}
+
+.username {
+    margin-top:0;
+    font-size: 1em;
+    color:rgb(95, 95, 95);
 }
