--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 /* page is a css grid, with the first column holding the side bar, and the second column holding the header and main content area */
 .dashboard {
     display:grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 1fr 8fr;
     grid-auto-flow:column;
     height:90vh;
 }
@@ -193,7 +193,7 @@ img {
     border-style: none none none solid;
     border-width: 1em;
     border-color:orange;
-    
+    text-wrap:wrap;
 }
 
 .title p {
